syntax = "proto3";

package protorpc.core;

enum FrameFlags {
    None = 0;
    EndOfStream = 1;
    Empty = 2;
}

message RequestHeader {
    map<string, string> metadata = 1;
}

message Request {
    bytes payload = 1;
}

message ResponseHeader {
    bool success = 1;
    optional string error = 2;
    map<string, string> metadata = 3;
}

message Response {
    bytes payload = 1;
}

message Frame {
    uint64 id_high = 1;
    uint64 id_low = 2;
    string service = 3;
    string method = 4;
    uint32 flags = 5;
    oneof payload {
        RequestHeader request_header = 6;
        Request request = 7;
        ResponseHeader response_header = 8;
        Response response = 9;
    }
}
